After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709955 - kerberos: correctly show sign in errors when mistyping password
kerberos: correctly show sign in errors when mistyping password
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: Kerberos
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-10-11 23:18 UTC by Ray Strode [halfline]
Modified: 2013-10-14 18:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
kerberos: correctly show sign in errors when mistyping password (2.38 KB, patch)
2013-10-11 23:18 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2013-10-11 23:18:31 UTC
Right now if a user toggles the kerberos switch on, and then
mistypes their password, we pretend like everything succeeded.

This commit makes sure we report the failure and also makes sure
we show a Sign In button so the user can try again.
Comment 1 Ray Strode [halfline] 2013-10-11 23:18:33 UTC
Created attachment 257065 [details] [review]
kerberos: correctly show sign in errors when mistyping password
Comment 2 Debarshi Ray 2013-10-14 16:03:45 UTC
Review of attachment 257065 [details] [review]:

Looks fine to me. Worked as expected after a round of testing.
Comment 3 Ray Strode [halfline] 2013-10-14 18:08:54 UTC
Attachment 257065 [details] pushed as 4ef7150 - kerberos: correctly show sign in errors when mistyping password