kerberos: correctly show sign in errors when mistyping password

Right now if a user toggles the kerberos switch on, and then
mistypes their password, we pretend like everything succeeded.

This commit makes sure we report the failure and also makes sure
we show a Sign In button so the user can try again.

https://bugzilla.gnome.org/show_bug.cgi?id=709955